fix(chat) Fix name overflows chat bubble (#13303)
Revert color change of scroll corner

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -74,10 +74,6 @@
     a:active {
         color: black;
     }
-
-    &::-webkit-scrollbar-corner {
-        background: #3a3a3a;
-    }
 }
 
 
